配置溯源同步接口优化
