# ragdoll/models/domain_ip.py
@@ -1,0 +1,92 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from ragdoll.models.base_model_ import Model
+from ragdoll import util
+
+
+class DomainIp(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, domain_name: str=None, ip: str=None):  # noqa: E501
+        """DomainName - a model defined in Swagger
+
+        :param domain_name: The domain_name of this DomainName.  # noqa: E501
+        :type domain_name: str
+        """
+        self.swagger_types = {
+            'domain_name': str,
+            'ip': str
+        }
+
+        self.attribute_map = {
+            'domain_name': 'domainName',
+            'ip': 'ip'
+        }
+
+        self._domain_name = domain_name
+        self._ip = ip
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'DomainName':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The DomainName of this DomainName.  # noqa: E501
+        :rtype: DomainName
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def domain_name(self) -> str:
+        """Gets the domain_name of this DomainName.
+
+        domain name  # noqa: E501
+
+        :return: The domain_name of this DomainName.
+        :rtype: str
+        """
+        return self._domain_name
+
+    @domain_name.setter
+    def domain_name(self, domain_name: str):
+        """Sets the domain_name of this DomainName.
+
+        domain name  # noqa: E501
+
+        :param domain_name: The domain_name of this DomainName.
+        :type domain_name: str
+        """
+
+        self._domain_name = domain_name
+
+    @property
+    def ip(self) -> str:
+        """Gets the ip in this domain.
+
+        the ipv4 address in this domain  # noqa: E501
+
+        :return: The ip in this domain.
+        :rtype: str
+        """
+        return self._ip
+
+    @ip.setter
+    def ip(self, ip: str):
+        """Sets the ip in this domain.
+
+        the ipv4 address in this domain  # noqa: E501
+
+        :param ip: The ip in this domain.
+        :type ip: str
+        """
+
+        self._ip = ip
