# ragdoll/models/domain_names.py
@@ -1,0 +1,65 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from ragdoll.models import DomainName
+from ragdoll.models.base_model_ import Model
+from ragdoll import util
+
+
+class DomainNames(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, domain_names: List[DomainName]=None):  # noqa: E501
+        """DomainName - a model defined in Swagger
+
+        :param domain_names: The domain_names of this DomainNames.  # noqa: E501
+        :type domain_names: List[DomainName]
+        """
+        self.swagger_types = {
+            'domain_names': List[DomainName]
+        }
+
+        self.attribute_map = {
+            'domain_names': 'domainNames'
+        }
+
+        self._domain_names = domain_names
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'DomainNames':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The DomainNames of this DomainNames.  # noqa: E501
+        :rtype: DomainNames
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def domain_names(self) -> List[DomainName]:
+        """Gets the domain_names of this DomainNames.
+
+
+        :return: The domain_names of this DomainNames.
+        :rtype: List[DomainName]
+        """
+        return self._domain_names
+
+    @domain_names.setter
+    def domain_names(self, domain_names: List[DomainName]):
+        """Sets the domain_names of this DomainNames.
+
+
+        :param domain_names: The domain_names of this DomainNames.
+        type domain_names: List[DomainName]
+        """
+
+        self._domain_names = domain_names
